[package]
name = "ubuild"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
signal-hook = "0.3"
tokio = {version = "1.4", features = ["full"]}
async-trait = "0.1"
futures = "0.3"
nix = "0.20"
ctrlc = "3.4"
