[package]
name = "ubuild"
version = "0.1.0"
edition = "2021"
description = "Run commands in a portable environment"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
signal-hook = "0.3"
tokio = {version = "1.4", features = ["full"]}
async-trait = "0.1"
futures = "0.3"
nix = "0.20"
ctrlc = "3.4"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_urlencoded = "0.7"
reqwest = "0.11"
chrono = "0.4"
log = "0.4"
teloxide = { version = "0.12", features = ["macros"] }
env_logger = "0.11"
libc = "0.2.170"
